[gd_scene load_steps=17 format=3 uid="uid://cpyv8vu5ublax"]

[ext_resource type="PackedScene" uid="uid://fcy44fluab2d" path="res://scenes/entities/enemies/enemy.tscn" id="1_hpa40"]
[ext_resource type="PackedScene" uid="uid://c16qxxd7mhpfp" path="res://graphics/characters/skeleton mage/Skeleton_Mage.glb" id="2_5u0bv"]
[ext_resource type="Script" path="res://scenes/entities/enemies/mage.gd" id="2_ja36n"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="3_hekti"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="4_6cql0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r2nab"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wa8gy"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_eatmg"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xhwhi"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4gp87"]
animation = &"Walking_C"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3i6ug"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wyj45"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_up5jc"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pklld"]
states/Idle/node = SubResource("AnimationNodeAnimation_xhwhi")
states/Idle/position = Vector2(368, 100)
states/Running/node = SubResource("AnimationNodeAnimation_4gp87")
states/Running/position = Vector2(546, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_3i6ug"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_wyj45"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_up5jc")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qys4q"]
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_wa8gy")
nodes/AttackAnimation/position = Vector2(320, 320)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_eatmg")
nodes/AttackOneShot/position = Vector2(620, 120)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_pklld")
nodes/MoveStateMachine/position = Vector2(340, 120)
nodes/output/position = Vector2(800, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6oel"]
albedo_texture = ExtResource("4_6cql0")

[node name="Mage" instance=ExtResource("1_hpa40")]
script = ExtResource("2_ja36n")
attack_radius = 10.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_r2nab")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_qys4q")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="Skin" parent="." index="2" instance=ExtResource("2_5u0bv")]

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/4/rotation = Quaternion(-0.514121, -0.485468, -0.485468, 0.514122)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(1.64805e-09, -5.95036e-08, -0.0552855, 0.998471)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(1.60975e-09, 1.60975e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.514121, 0.485468, 0.485468, 0.514122)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(1.64805e-09, 5.95036e-08, 0.0552855, 0.998471)
bones/11/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(1.60973e-09, -1.60973e-09, 0.707107, 0.707107)
bones/13/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.999849, -7.13276e-08, -1.20427e-08, 0.0173732)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.106225, 6.86528e-08, -7.37699e-08, 0.994342)
bones/18/rotation = Quaternion(-0.455239, 1.61971e-08, -3.43568e-08, 0.890369)
bones/19/rotation = Quaternion(4.77599e-08, 0.920355, -0.391084, 5.80156e-08)
bones/19/scale = Vector3(1, 0.999997, 1)
bones/20/rotation = Quaternion(0.999849, 7.42656e-08, -3.17263e-08, 0.0173732)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.106225, -6.86529e-08, 7.37699e-08, 0.994342)
bones/23/rotation = Quaternion(2.12198e-08, 0.920355, -0.391084, 6.45059e-08)
bones/23/scale = Vector3(1, 0.999997, 1)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/27/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.9526e-08)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/34/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/35/rotation = Quaternion(-0.391084, -6.885e-08, -6.56287e-08, 0.920355)
bones/41/rotation = Quaternion(0.5, -0.5, -0.5, -0.5)

[node name="Skeleton_Mage_Hat" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(1, -2.20965e-22, 1.69407e-21, 2.20965e-22, 1, 0, -1.69407e-21, 0, 1, 0.000286102, 1.7841, -1.35973e-07)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Skin/Rig/Skeleton3D" index="9"]
transform = Transform3D(-0.999999, 6.06228e-07, 3.97706e-07, 4.01214e-07, -5.29247e-07, 0.999999, 5.95056e-07, 0.999999, 5.35882e-07, -0.883132, 1.04926, -5.99045e-07)
bone_name = "handslot.r"
bone_idx = 13

[node name="wand2" parent="Skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("3_hekti")]

[node name="wand" parent="Skin/Rig/Skeleton3D/BoneAttachment3D/wand2" index="0"]
material_override = SubResource("StandardMaterial3D_e6oel")

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Skin"]
[editable path="Skin/Rig/Skeleton3D/BoneAttachment3D/wand2"]
